# DistServe

./: .dockerignore  .gitignore  README.md  Readme.md  contants.py  docker-compose.yml  download_docx.py  main.py  requirements.txt
api/: calls.py
assembler_service/: Dockerfile  assembler_service.py  db.py  requirements.txt  settings.py
config/: settings.py
consumer_service/: Dockerfile  constants.py  consumer.py  db.py  queries.py  requirements.txt  settings.py
cron-jobs/: stale_chunk_sweep.py
db/: connections.py  init_db.py  queries.py
db/sp/: create_table.sql
distserver-common/: pyproject.toml
distserver-common/discom/: constants.py  logger.py  model.yaml  queries.py  settings.py
gpu_worker/: Dockerfile  api.py  chunks_counter.lua  db.py  engine.py  generator.py  handler.py  requirements.txt  schemas.py  settings.py
gpu_worker_modal/: chunks_counter.lua  db.py  engine.py  generator.py  requirements.txt  test_modal.py
middleware/: api_auth.py  rate_limiter.py
producer_service/: Dockerfile  main.py  requirements.txt  settings.py
producer_service/config/: constants.py  settings.py
producer_service/db/: init_db.py  queries.py
producer_service/middleware/: api_auth.py  fixed_window.lua  rate_limiter.py
results/: output_1.docx
sp/: create_table.sql
worker/: celery_app.py  tasks.py
